--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --ignore-watch node-modules src/server.ts",
-    "knex:migrate": "knex migrate:latest --knexfile knexfile.ts",
-    "knex:seed": "knex seed:run --knexfile knexfile.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "PORT=3333 ts-node-dev --ignore-watch node-modules src/server.ts",
+    "start": "ts-node src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,15 +17,20 @@
     "express": "^4.17.1",
     "knex": "^0.21.1",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1",
-    "sqlite3": "^4.2.0"
+    "sqlite3": "^4.2.0",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/hapi__joi": "^17.1.2",
-    "ts-node": "^8.10.2",
-    "ts-node-dev": "^1.0.0-pre.47",
-    "typescript": "^3.9.5"
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.13",
+    "jest": "^26.0.1",
+    "nodemon": "^2.0.4",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.1.1",
+    "ts-node-dev": "^1.0.0-pre.47"
   }
 }
