--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "knex": "^0.21.1",
     "multer": "^1.4.2",
+    "mysql": "^2.18.1",
     "sqlite3": "^4.2.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
